--- a/models/FICO_DBT_TEST/raw/_src_raw.yml
+++ b/models/FICO_DBT_TEST/raw/_src_raw.yml
@@ -5,7 +5,7 @@ sources:
     config:
       tags: ["nightly"]
     description: ""
-    database:  "{{ env_var('DBT_DATABASE') }}"
+    database:  DEV_FICO
     schema: RAW_SCH
     tables:
       - name: customers
